--- a/libs/postgres_integration/Cargo.toml
+++ b/libs/postgres_integration/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "diesel_demo"
+name = "postgres_integration"
 version = "0.1.0"
 authors = ["kuqmua <serezhashmakov@outlook.com>"]
 edition = "2018"
