--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 MONGO_USERNAME=root
 MONGO_PASSWORD=rootpassword
+DATABASE_URL=postgres://postgres:postgres@localhost/test_postgres_db
