little work around errors in diesel establish connection to postgres

--- a/libs/postgres_integration/Cargo.toml
+++ b/libs/postgres_integration/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 diesel = { version = "1.4.7", features = ["postgres"] }#there is a new versions
 dotenv = "0.15.0"
+prints_lib = { path = "../prints_lib" }
