--- a/config/User_credentials.toml
+++ b/config/User_credentials.toml
@@ -18,5 +18,11 @@ mongo_own_port = "example"
 [mongo_cloud_authorization]
 mongo_cloud_login = "example"
 mongo_cloud_password = "example"
-mongo_cloud_cluster_name = "example"
+mongo_cloud_cluster_name = "example" # or is it more than cluster name?
 mongo_cloud_cluster_params = "example"
+
+[postgres_own_authorization]
+postgres_own_login = "example"
+postgres_own_password = "example"
+postgres_own_ip = "example"
+postgres_own_db = "example" # or maybe db should be in config?
