enable_mongo_own_url_parts as struct in config

--- a/config/Development.toml
+++ b/config/Development.toml
@@ -48,10 +48,11 @@ enable_initialize_mongo_with_providers_link_parts = true
   db_providers_logs_collection_document_field_name_handle = "data"
   # todo: move this into few diferent mongo objects
   # mongodb://login:password@127.0.0.1:8888
-  mongo_own_first_handle_url_part = "mongodb://"
-  mongo_own_second_handle_url_part = ":"
-  mongo_own_third_handle_url_part = "@"
-  mongo_own_fourth_handle_url_part = ":"
+  [mongo_params.enable_mongo_own_url_parts]
+    mongo_own_first_handle_url_part = "mongodb://"
+    mongo_own_second_handle_url_part = ":"
+    mongo_own_third_handle_url_part = "@"
+    mongo_own_fourth_handle_url_part = ":"
   # mongodb+srv://login:password@db-name.some_random_hash.mongodb.net/cluster_params
   [mongo_params.enable_mongo_cloud_url_parts]
     mongo_cloud_first_handle_url_part = "mongodb+srv://"
