--- a/libs/helpers_lib/Cargo.toml
+++ b/libs/helpers_lib/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde_json = "1.0"
 config_lib = { path = "../config_lib" }
 prints_lib = { path = "../prints_lib" }
