private check_valid_vec_of_provider_names for ConfigStruct, add itertools in dependency

--- a/libs/config_lib/Cargo.toml
+++ b/libs/config_lib/Cargo.toml
@@ -13,4 +13,5 @@ serde_derive = "1.0"
 serde = "1.0"
 strum = "0.21"
 strum_macros = "0.21"
+itertools = "0.10.1"
 procedural_macros_lib = { path = "../procedural_macros_lib" }
