migrate user credentials structure into .env file (not fullly done yet)

--- a/.env
+++ b/.env
@@ -1,5 +1,30 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-MONGO_USERNAME=root
-MONGO_PASSWORD=rootpassword
-PROJECT_RUN_MODE=Development
+PROJECT_RUN_MODE="example" # its only Development Production or Testing
+
+# github authorization
+GITHUB_NAME = "example"
+GITHUB_TOKEN = "example"
+
+# reddit authorization 
+REDDIT_USER_AGENT = "example"
+REDDIT_CLIENT_ID = "example"
+REDDIT_CLIENT_SECRET = "example"
+REDDIT_USERNAME = "example"
+REDDIT_PASSWORD = "example"
+
+# mongo_own_authorization
+MONGO_OWN_LOGIN = "example"
+MONGO_OWN_PASSWORD = "example"
+MONGO_OWN_IP = "example"
+MONGO_OWN_PORT = "example"
+
+# mongo_cloud_authorization
+MONGO_CLOUD_LOGIN = "example"
+MONGO_CLOUD_PASSWORD = "example"
+MONGO_CLOUD_CLUSTER_NAME = "example" # or is it more than cluster name?
+MONGO_CLOUD_CLUSTER_PARAMS = "example"
+
+# postgres_own_authorization
+POSTGRES_OWN_LOGIN = "example"
+POSTGRES_OWN_PASSWORD = "example"
+POSTGRES_OWN_IP = "example"
+POSTGRES_OWN_DB = "example" # or maybe db should be in config?
