--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,20 @@
-target/
+/.github
+/.vscode
+/code_examples
 libs/config_lib/target
+libs/helpers_lib/target
+libs/mongo_integration/target
+libs/postgres_integration/target
+libs/prints_lib/target
+libs/procedural_macros_lib/target
 libs/providers_info_lib/target
 libs/tests_lib/target
 /logs
-/.vscode
 /mongodb_volume
-/postgresql_volume
 /parsing_file_examples
+/postgresql_volume
+/target
+/todos
+.gitignore
+docker-compose.yml
+README.md
