return postgres and mongo env variables in .env file

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
+# for postgres container 
+POSTGRES_USER="example"
+POSTGRES_PASSWORD="example"
+# for mongo container
+MONGO_USERNAME="example"
+MONGO_PASSWORD="example"
+
 PROJECT_RUN_MODE="example" # its only Development Production or Testing
 
 # github authorization
