--- a/libs/config_lib/Cargo.toml
+++ b/libs/config_lib/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 lazy_static = "1.4"
 config = "0.10"
 serde_derive = "1.0"
+serde_json = "1.0.68" #for VEC_OF_PROVIDER_NAMES from environment variables
 serde = "1.0"
 strum = "0.21"
 strum_macros = "0.21"
