--- a/libs/config_lib/Cargo.toml
+++ b/libs/config_lib/Cargo.toml
@@ -16,4 +16,5 @@ strum = "0.21"
 strum_macros = "0.21"
 itertools = "0.10.1"
 dotenv = "0.15.0"
+toml = "0.5"
 procedural_macros_lib = { path = "../procedural_macros_lib" }
