remove config toml and some comments todo and etc

--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ MONGO_CLOUD_CLUSTER_PARAMS = "example"
 POSTGRES_OWN_LOGIN = "example"
 POSTGRES_OWN_PASSWORD = "example"
 POSTGRES_OWN_IP = "example"
-POSTGRES_OWN_DB = "example" # or maybe db should be in config?
+POSTGRES_OWN_DB = "example"
 
 # ////////////////////////////////
 #[params]
