todo_code move USER_CREDENTIALS_DUMMY_HANDLE from .env to project constants

--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@ POSTGRES_OWN_DB = "example"
 VEC_OF_PROVIDER_NAMES="[arxiv, biorxiv, github, habr, medrxiv, reddit, twitter]"
 #it can be only one of them: arxiv, biorxiv, github, habr, medrxiv, reddit, twitter - check project_constants.rs
 STARTING_CHECK_LINK="https://www.google.com/"
-USER_CREDENTIALS_DUMMY_HANDLE="example"
+USER_CREDENTIALS_DUMMY_HANDLE="example" #move it into project constants?
 WARNING_LOGS_DIRECTORY_NAME="warning_logs"
 UNHANDLED_SUCCESS_HANDLED_SUCCESS_ARE_THERE_ITEMS_INITIALIZED_POSTS_DIR="unhandled_success_handled_success_are_there_items_initialized_posts"
 # // pub const ERROR_LOGS_DIRECTORY_NAME: &str="error_logs;
