--- a/.env
+++ b/.env
@@ -1,40 +1,25 @@
-# for postgres container 
-POSTGRES_USER="example"
-POSTGRES_PASSWORD="example"
-# for mongo container
-MONGO_USERNAME="example"
-MONGO_PASSWORD="example"
+# for mongo local docker container
+MONGO_LOCAL_DOCKER_USERNAME="example"
+MONGO_LOCAL_DOCKER_PASSWORD="example"
 
-# github authorization
+# for postgres local docker container 
+POSTGRES_LOCAL_DOCKER_USERNAME="example"
+POSTGRES_LOCAL_DOCKER_PASSWORD="example"
+
+################################################################################
+# for tufa_backend
+
+#[github_authorization]
 GITHUB_NAME = "example"
 GITHUB_TOKEN = "example"
 
-# reddit authorization 
+#[reddit_authorization]
 REDDIT_USER_AGENT = "example"
 REDDIT_CLIENT_ID = "example"
 REDDIT_CLIENT_SECRET = "example"
 REDDIT_USERNAME = "example"
 REDDIT_PASSWORD = "example"
 
-# mongo_own_authorization
-MONGO_OWN_LOGIN = "example"
-MONGO_OWN_PASSWORD = "example"
-MONGO_OWN_IP = "example"
-MONGO_OWN_PORT = "example"
-
-# mongo_cloud_authorization
-MONGO_CLOUD_LOGIN = "example"
-MONGO_CLOUD_PASSWORD = "example"
-MONGO_CLOUD_CLUSTER_NAME = "example" # or is it more than cluster name?
-MONGO_CLOUD_CLUSTER_PARAMS = "example"
-
-# postgres_own_authorization
-POSTGRES_OWN_LOGIN = "example"
-POSTGRES_OWN_PASSWORD = "example"
-POSTGRES_OWN_IP = "example"
-POSTGRES_OWN_DB = "example"
-
-# ////////////////////////////////
 #[params]
 VEC_OF_PROVIDER_NAMES="[arxiv, biorxiv, github, habr, medrxiv, reddit, twitter]"
 #it can be only one of them: arxiv, biorxiv, github, habr, medrxiv, reddit, twitter - check project_constants.rs
@@ -42,7 +27,7 @@ STARTING_CHECK_LINK="https://www.google.com/"
 USER_CREDENTIALS_DUMMY_HANDLE="example" #move it into project constants?
 WARNING_LOGS_DIRECTORY_NAME="warning_logs"
 UNHANDLED_SUCCESS_HANDLED_SUCCESS_ARE_THERE_ITEMS_INITIALIZED_POSTS_DIR="unhandled_success_handled_success_are_there_items_initialized_posts"
-# // pub const ERROR_LOGS_DIRECTORY_NAME: &str="error_logs;
+# // pub const ERROR_LOGS_DIRECTORY_NAME: &str="error_logs
 ENABLE_PROVIDERS="true"
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_IN_MONGO="true"
@@ -50,7 +35,7 @@ ENABLE_CLEANING_WARNING_LOGS_DB_COLLECTIONS_IN_MONGO="true"
 ENABLE_TIME_MEASUREMENT="true"
 ENABLE_PROVIDER_LINKS_LIMIT="true"
 ENABLE_COMMON_PROVIDERS_LINKS_LIMIT="true"
-COMMON_PROVIDERS_LINKS_LIMIT="1" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+COMMON_PROVIDERS_LINKS_LIMIT="30" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 ENABLE_RANDOMIZE_ORDER_FOR_PROVIDERS_LINK_PARTS_FOR_MONGO="true"
 ENABLE_PRINTS="true"
 ENABLE_ERROR_PRINTS="true"
@@ -72,10 +57,10 @@ ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_PRINTS_FOR_ALL_PROVIDERS="true"
 ENABLE_INFO_PRINTS_FOR_ALL_PROVIDERS="true"
 ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER="false"
 ENABLE_WRITE_ERROR_LOGS_IN_MONGO="true"
-ENABLE_INITIALIZE_MONGO_WITH_PROVIDERS_LINK_PARTS="true"
+ENABLE_INITIALIZE_MONGO_WITH_PROVIDERS_LINK_PARTS="false"
 
-# [mongo_params]
-IS_CLOUD="true"
+#[mongo_params]
+# url example MONGO_FIRST_HANDLE_URL_PART&MONGO_LOGIN&MONGO_SECOND_HANDLE_URL_PART&MONGO_PASSWORD&MONGO_THIRD_HANDLE_URL_PART&MONGO_IP&MONGO_FOURTH_HANDLE_URL_PART&MONGO_PORT&MONGO_IP&MONGO_FIFTH_HANDLE_URL_PART&MONGO_PARAMS
 PROVIDERS_DB_NAME_HANDLE="provider_links" # rename this into providers_...
 PROVIDERS_DB_COLLECTION_HANDLE_SECOND_PART="_link_parts" # rename this into providers_...
 PROVIDERS_DB_COLLECTION_DOCUMENT_FIELD_NAME_HANDLE="link_part" # rename this into providers_...
@@ -87,21 +72,7 @@ DB_PROVIDERS_LOGS_NAME_HANDLE="logs"
 DB_PROVIDERS_LOGS_COLLECTION_HANDLE_SECOND_PART="second_part"
 DB_PROVIDERS_LOGS_COLLECTION_DOCUMENT_FIELD_NAME_HANDLE="data"
 
-# mongodb://login:password@127.0.0.1:8888
-# [mongo_params.enable_mongo_own_url_parts]
-MONGO_OWN_FIRST_HANDLE_URL_PART="mongodb://"
-MONGO_OWN_SECOND_HANDLE_URL_PART=":"
-MONGO_OWN_THIRD_HANDLE_URL_PART="@"
-MONGO_OWN_FOURTH_HANDLE_URL_PART=":"
-
-# mongodb+srv://login:password@db-name.some_random_hash.mongodb.net/cluster_params
-# [mongo_params.enable_mongo_cloud_url_parts]
-MONGO_CLOUD_FIRST_HANDLE_URL_PART="mongodb+srv://"
-MONGO_CLOUD_SECOND_HANDLE_URL_PART=":"
-MONGO_CLOUD_THIRD_HANDLE_URL_PART="@"
-MONGO_CLOUD_FOURTH_HANDLE_URL_PART="/"
-
-# [mongo_params.enable_initialize_mongo_with_providers_link_parts]
+#[mongo_params.enable_initialize_mongo_with_providers_link_parts]
 ENABLE_INITIALIZE_MONGO_WITH_ARXIV_LINK_PARTS="true"
 ENABLE_INITIALIZE_MONGO_WITH_BIORXIV_LINK_PARTS="true"
 ENABLE_INITIALIZE_MONGO_WITH_GITHUB_LINK_PARTS="true"
@@ -110,15 +81,68 @@ ENABLE_INITIALIZE_MONGO_WITH_MEDRXIV_LINK_PARTS="true"
 ENABLE_INITIALIZE_MONGO_WITH_REDDIT_LINK_PARTS="true"
 ENABLE_INITIALIZE_MONGO_WITH_TWITTER_LINK_PARTS="true"
 
-# #postgres://login:password@127.0.0.1/db_name 
-# #todo: where is a port?
-#[postgres_params]
-POSTGRES_OWN_FIRST_HANDLE_URL_PART="postgres://"
-POSTGRES_OWN_SECOND_HANDLE_URL_PART=":"
-POSTGRES_OWN_THIRD_HANDLE_URL_PART="@"
-POSTGRES_OWN_FOURTH_HANDLE_URL_PART="/"
+#[mongo_params.mongo_url_parts] local 
+MONGO_FIRST_HANDLE_URL_PART="mongodb://"
+MONGO_SECOND_HANDLE_URL_PART=":"
+MONGO_THIRD_HANDLE_URL_PART="@"
+MONGO_FOURTH_HANDLE_URL_PART=":"
+MONGO_FIFTH_HANDLE_URL_PART=""
 
-# [enable_providers]
+#[mongo_params.mongo_url_parts] cloud 
+# MONGO_FIRST_HANDLE_URL_PART="mongodb+srv://"
+# MONGO_SECOND_HANDLE_URL_PART=":"
+# MONGO_THIRD_HANDLE_URL_PART="@"
+# MONGO_FOURTH_HANDLE_URL_PART=""
+# MONGO_FOURTH_HANDLE_URL_PART=""
+# MONGO_FIFTH_HANDLE_URL_PART="/"
+
+#[mongo_params.mongo_authorization] local
+MONGO_LOGIN = "example"
+MONGO_PASSWORD = "example"
+MONGO_IP = "example"
+MONGO_PORT = "example"
+MONGO_PARAMS = "example"
+
+#[mongo_params.mongo_authorization] cloud
+# MONGO_LOGIN = "example"
+# MONGO_PASSWORD = "example"
+# MONGO_IP = "example" #or is it more than cluster name?
+# MONGO_PORT = "example"
+# MONGO_PARAMS = "example"
+
+#[postgres_params]
+# example POSTGRES_FIRST_HANDLE_URL_PART&POSTGRES_LOGIN&POSTGRES_SECOND_HANDLE_URL_PART&POSTGRES_PASSWORD&POSTGRES_THIRD_HANDLE_URL_PART&POSTGRES_IP&POSTGRES_FOURTH_HANDLE_URL_PART&POSTGRES_DB
+
+#[postgres_params.postgres_url_parts] local
+# POSTGRES_FIRST_HANDLE_URL_PART="postgres://"
+# POSTGRES_SECOND_HANDLE_URL_PART=":"
+# POSTGRES_THIRD_HANDLE_URL_PART="@"
+# POSTGRES_FOURTH_HANDLE_URL_PART=":"
+# POSTGRES_FIFTH_HANDLE_URL_PART="/"
+
+#[postgres_params.postgres_url_parts] cloud
+POSTGRES_FIRST_HANDLE_URL_PART="postgres://"
+POSTGRES_SECOND_HANDLE_URL_PART=":"
+POSTGRES_THIRD_HANDLE_URL_PART="@"
+POSTGRES_FOURTH_HANDLE_URL_PART=""
+POSTGRES_FIFTH_HANDLE_URL_PART="/"
+
+#[postgres_params.postgres_authorization] local 
+# POSTGRES_LOGIN = "example"
+# POSTGRES_PASSWORD = "example"
+# # //POSTGRES_HOST_NAME
+# POSTGRES_IP = "example"
+# POSTGRES_PORT = "example"
+# POSTGRES_DB = "example"
+
+#[postgres_params.postgres_authorization] cloud 
+POSTGRES_LOGIN = "example"
+POSTGRES_PASSWORD = "example"
+POSTGRES_IP = "example"
+POSTGRES_PORT = "example"
+POSTGRES_DB = "example"
+
+#[enable_providers]
 ENABLE_ARXIV="false"
 ENABLE_BIORXIV="false"
 ENABLE_GITHUB="false"
@@ -145,7 +169,7 @@ ENABLE_PRINTS_MEDRXIV="true"
 ENABLE_PRINTS_REDDIT="true"
 ENABLE_PRINTS_TWITTER="true"
 
-# #[enable_warning_high_providers_prints]
+#[enable_warning_high_providers_prints]
 ENABLE_WARNING_HIGH_PRINTS_FOR_ARXIV="true"
 ENABLE_WARNING_HIGH_PRINTS_FOR_BIORXIV="true"
 ENABLE_WARNING_HIGH_PRINTS_FOR_GITHUB="true"
@@ -154,7 +178,7 @@ ENABLE_WARNING_HIGH_PRINTS_FOR_MEDRXIV="true"
 ENABLE_WARNING_HIGH_PRINTS_FOR_REDDIT="true"
 ENABLE_WARNING_HIGH_PRINTS_FOR_TWITTER="true"
 
-# #[enable_warning_low_providers_prints]
+#[enable_warning_low_providers_prints]
 ENABLE_WARNING_LOW_PRINTS_FOR_ARXIV="true"
 ENABLE_WARNING_LOW_PRINTS_FOR_BIORXIV="true"
 ENABLE_WARNING_LOW_PRINTS_FOR_GITHUB="true"
@@ -163,7 +187,7 @@ ENABLE_WARNING_LOW_PRINTS_FOR_MEDRXIV="true"
 ENABLE_WARNING_LOW_PRINTS_FOR_REDDIT="true"
 ENABLE_WARNING_LOW_PRINTS_FOR_TWITTER="true"
 
-# #[enable_error_providers_prints]
+#[enable_error_providers_prints]
 ENABLE_ERROR_PRINTS_FOR_ARXIV="true"
 ENABLE_ERROR_PRINTS_FOR_BIORXIV="true"
 ENABLE_ERROR_PRINTS_FOR_GITHUB="true"
@@ -172,7 +196,7 @@ ENABLE_ERROR_PRINTS_FOR_MEDRXIV="true"
 ENABLE_ERROR_PRINTS_FOR_REDDIT="true"
 ENABLE_ERROR_PRINTS_FOR_TWITTER="true"
 
-# #[enable_success_providers_prints]
+#[enable_success_providers_prints]
 ENABLE_SUCCESS_PRINTS_FOR_ARXIV="true"
 ENABLE_SUCCESS_PRINTS_FOR_BIORXIV="true"
 ENABLE_SUCCESS_PRINTS_FOR_GITHUB="true"
@@ -181,7 +205,7 @@ ENABLE_SUCCESS_PRINTS_FOR_MEDRXIV="true"
 ENABLE_SUCCESS_PRINTS_FOR_REDDIT="true"
 ENABLE_SUCCESS_PRINTS_FOR_TWITTER="true"
 
-# #[enable_partial_success_providers_prints]
+#[enable_partial_success_providers_prints]
 ENABLE_PARTIAL_SUCCESS_PRINTS_FOR_ARXIV="true"
 ENABLE_PARTIAL_SUCCESS_PRINTS_FOR_BIORXIV="true"
 ENABLE_PARTIAL_SUCCESS_PRINTS_FOR_GITHUB="true"
@@ -190,7 +214,7 @@ ENABLE_PARTIAL_SUCCESS_PRINTS_FOR_MEDRXIV="true"
 ENABLE_PARTIAL_SUCCESS_PRINTS_FOR_REDDIT="true"
 ENABLE_PARTIAL_SUCCESS_PRINTS_FOR_TWITTER="true"
 
-# #[enable_providers_cleaning_warning_logs_directory]
+#[enable_providers_cleaning_warning_logs_directory]
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_ARXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_BIORXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_GITHUB="true"
@@ -199,7 +223,7 @@ ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_MEDRXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_REDDIT="true"
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_TWITTER="true"
 
-# #[enable_providers_cleaning_warning_logs_db_in_mongo]
+#[enable_providers_cleaning_warning_logs_db_in_mongo]
 ENABLE_CLEANING_WARNING_LOGS_DB_IN_MONGO_FOR_ARXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_IN_MONGO_FOR_BIORXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_IN_MONGO_FOR_GITHUB="true"
@@ -208,7 +232,7 @@ ENABLE_CLEANING_WARNING_LOGS_DB_IN_MONGO_FOR_MEDRXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_IN_MONGO_FOR_REDDIT="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_IN_MONGO_FOR_TWITTER="true"
 
-# #[enable_providers_cleaning_warning_logs_db_collections_in_mongo]
+#[enable_providers_cleaning_warning_logs_db_collections_in_mongo]
 ENABLE_CLEANING_WARNING_LOGS_DB_COLLECTIONS_IN_MONGO_FOR_ARXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_COLLECTIONS_IN_MONGO_FOR_BIORXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_COLLECTIONS_IN_MONGO_FOR_GITHUB="true"
@@ -217,7 +241,7 @@ ENABLE_CLEANING_WARNING_LOGS_DB_COLLECTIONS_IN_MONGO_FOR_MEDRXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_COLLECTIONS_IN_MONGO_FOR_REDDIT="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_COLLECTIONS_IN_MONGO_FOR_TWITTER="true"
 
-# #[enable_providers_time_measurement]
+#[enable_providers_time_measurement]
 ENABLE_TIME_MEASUREMENT_FOR_ARXIV="true"
 ENABLE_TIME_MEASUREMENT_FOR_BIORXIV="true"
 ENABLE_TIME_MEASUREMENT_FOR_GITHUB="true"
@@ -226,7 +250,7 @@ ENABLE_TIME_MEASUREMENT_FOR_MEDRXIV="true"
 ENABLE_TIME_MEASUREMENT_FOR_REDDIT="true"
 ENABLE_TIME_MEASUREMENT_FOR_TWITTER="true"
 
-# #[enable_providers_info]
+#[enable_providers_info]
 ENABLE_INFO_FOR_ARXIV="true"
 ENABLE_INFO_FOR_BIORXIV="true"
 ENABLE_INFO_FOR_GITHUB="true"
@@ -235,7 +259,7 @@ ENABLE_INFO_FOR_MEDRXIV="true"
 ENABLE_INFO_FOR_REDDIT="true"
 ENABLE_INFO_FOR_TWITTER="true"
 
-# #[enable_providers_links_limits]
+#[enable_providers_links_limits]
 ENABLE_LINKS_LIMIT_FOR_ARXIV="true"
 ENABLE_LINKS_LIMIT_FOR_BIORXIV="true"
 ENABLE_LINKS_LIMIT_FOR_GITHUB="true"
@@ -244,7 +268,7 @@ ENABLE_LINKS_LIMIT_FOR_MEDRXIV="true"
 ENABLE_LINKS_LIMIT_FOR_REDDIT="true"
 ENABLE_LINKS_LIMIT_FOR_TWITTER="true"
 
-# #[enable_randomize_order_for_providers_link_parts_for_mongo]
+#[enable_randomize_order_for_providers_link_parts_for_mongo]
 ENABLE_RANDOMIZE_ORDER_FOR_ARXIV_LINK_PARTS_FOR_MONGO="true"
 ENABLE_RANDOMIZE_ORDER_FOR_BIORXIV_LINK_PARTS_FOR_MONGO="true"
 ENABLE_RANDOMIZE_ORDER_FOR_GITHUB_LINK_PARTS_FOR_MONGO="true"
@@ -253,7 +277,7 @@ ENABLE_RANDOMIZE_ORDER_FOR_MEDRXIV_LINK_PARTS_FOR_MONGO="true"
 ENABLE_RANDOMIZE_ORDER_FOR_REDDIT_LINK_PARTS_FOR_MONGO="true"
 ENABLE_RANDOMIZE_ORDER_FOR_TWITTER_LINK_PARTS_FOR_MONGO="true"
 
-# #[providers_links_limits]
+#[providers_links_limits]
 LINKS_LIMIT_FOR_ARXIV="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 LINKS_LIMIT_FOR_BIORXIV="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 LINKS_LIMIT_FOR_GITHUB="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
@@ -262,7 +286,7 @@ LINKS_LIMIT_FOR_MEDRXIV="10" # i64, but cannot be 0 or negative value (disable l
 LINKS_LIMIT_FOR_REDDIT="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 LINKS_LIMIT_FOR_TWITTER="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 
-# [print_colors]
+#[print_colors]
 ERROR_RED="255" # u8
 ERROR_GREEN="0" # u8
 ERROR_BLUE="0" # u8
