--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ num_cpus = "1.0"
 toml = "0.5"
 html_parser = "0.6.2"
 regex = "1.5"
+sea-orm = { version = "0.3.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ], default-features = false }
 # mongodb = "0.9.2"#some error while running tests with it
 diesel = { version = "1.4.7", features = ["postgres"] }
 dotenv = "0.15.0" #for diesel tutorial
