--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,9 @@ num_cpus = "1.0"
 toml = "0.5"
 html_parser = "0.6.2"
 regex = "1.5"
-sea-orm = { version = "0.3.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ], default-features = false }
+log = "0.4.14" #for sea orm logs
+env_logger = "0.9.0" #for sea orm logs
+sea-orm = { version = "0.3.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ], default-features = false, debug-print = true }
 # mongodb = "0.9.2"#some error while running tests with it
 diesel = { version = "1.4.7", features = ["postgres"] }
 dotenv = "0.15.0" #for diesel tutorial
