--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,11 @@ toml = "0.5"
 html_parser = "0.6.2"
 regex = "1.5"
 # mongodb = "0.9.2"#some error while running tests with it
-diesel = { version = "1.4.7", features = ["postgres"] }
-dotenv = "0.15.0" #for diesel tutorial
+diesel = { version = "1.4.8", features = ["postgres"] }#there is a new versions
+dotenv = "0.15.0"
 config_lib = { path = "./libs/config_lib" }
 prints_lib = { path = "./libs/prints_lib" }
 mongo_integration = { path = "./libs/mongo_integration" }#maybe remove it later into wrapper library
-postgres_integration = { path = "./libs/postgres_integration" }
 helpers_lib = { path = "./libs/helpers_lib" }
 #egg-mode = "0.15.0"//twitter
 #google-youtube3 = "1.0.13+20200402" - do not saw openssl, under linux its all good
