--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ serde_derive = "1.0"
 serde_json = "1.0"
 chrono = "0.4"
 tokio = {version = "1.7.1", features = ["macros"]}
+tokio_old_version_for_mongodb = {version = "0.2.25", package = "tokio"}#last supported mongo version
+mongodb = "1.2.2"
 ansi_term = "0.12"
 num_cpus = "1.0"
 toml = "0.5"
@@ -27,7 +29,7 @@ diesel = { version = "1.4.8", features = ["postgres"] }#there is a new versions
 dotenv = "0.15.0"
 config_lib = { path = "./libs/config_lib" }
 prints_lib = { path = "./libs/prints_lib" }
-mongo_integration = { path = "./libs/mongo_integration" }#maybe remove it later into wrapper library
+# mongo_integration = { path = "./libs/mongo_integration" }#maybe remove it later into wrapper library
 #egg-mode = "0.15.0"//twitter
 #google-youtube3 = "1.0.13+20200402" - do not saw openssl, under linux its all good
 # quick-xml = "0.18.1"
