--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,6 @@ num_cpus = "1.0"
 toml = "0.5"
 html_parser = "0.6.2"
 regex = "1.5"
-# mongodb = "0.9.2"#some error while running tests with it
 diesel = { version = "1.4.8", features = ["postgres"] }#there is a new versions
 dotenv = "0.15.0"
 config_lib = { path = "./libs/config_lib" }
@@ -49,4 +48,4 @@ prints_lib = { path = "./libs/prints_lib" }
 #tutorial from https://blog.logrocket.com/configuration-management-in-rust-web-services/
 
 [dev-dependencies]
-tests_lib = { path = "./libs/tests_lib" }
+# tests_lib = { path = "./libs/tests_lib" }
