--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,11 @@ html_parser = "0.6.2"
 regex = "1.5"
 diesel = { version = "1.4.8", features = ["postgres"] }#there is a new versions
 dotenv = "0.15.0"
-config_lib = { path = "./libs/config_lib" }
-prints_lib = { path = "./libs/prints_lib" }
-# mongo_integration = { path = "./libs/mongo_integration" }#maybe remove it later into wrapper library
+lazy_static = "1.4"
+strum = "0.21"
+strum_macros = "0.21"
+itertools = "0.10.1"
+procedural_macros_lib = { path = "./libs/procedural_macros_lib" }
 #egg-mode = "0.15.0"//twitter
 #google-youtube3 = "1.0.13+20200402" - do not saw openssl, under linux its all good
 # quick-xml = "0.18.1"
