--- a/.dockerignore
+++ b/.dockerignore
@@ -1,18 +1,12 @@
 /.github
 /.vscode
 /code_examples
-libs/config_lib/target
-libs/helpers_lib/target
-libs/mongo_integration/target
-libs/postgres_integration/target
-libs/prints_lib/target
-libs/procedural_macros_lib/target
-libs/providers_info_lib/target
-libs/tests_lib/target
 /logs
 /mongodb_volume
+/old_code
 /parsing_file_examples
 /postgresql_volume
+/procedural_macros_lib
 /target
 /tests_lib
 /todos
