arxiv_link renaming arxiv_check_link

--- a/.env
+++ b/.env
@@ -59,13 +59,13 @@ POSTGRES_IP="example"
 POSTGRES_PORT="example"
 POSTGRES_DB="example"
 
-ARXIV_LINK="https://www.google.com/" # https://arxiv.org/   http://export.arxiv.org/rss/   http://export.arxiv.org/rss/astro-ph.CO
-BIORXIV_LINK="https://www.google.com/" # http://connect.biorxiv.org/
-GITHUB_LINK="https://github.com/"
-HABR_LINK="https://www.google.com/" # https://habr.com/ru/
-MEDRXIV_LINK="https://www.google.com/" # http://connect.medrxiv.org/
-REDDIT_LINK="https://www.reddit.com/"
-TWITTER_LINK="https://www.google.com/" # must be not only 1 str but many - twitter and many nitters
+ARXIV_CHECK_LINK="https://www.google.com/" # https://arxiv.org/   http://export.arxiv.org/rss/   http://export.arxiv.org/rss/astro-ph.CO
+BIORXIV_CHECK_LINK="https://www.google.com/" # http://connect.biorxiv.org/
+GITHUB_CHECK_LINK="https://github.com/"
+HABR_CHECK_LINK="https://www.google.com/" # https://habr.com/ru/
+MEDRXIV_CHECK_LINK="https://www.google.com/" # http://connect.medrxiv.org/
+REDDIT_CHECK_LINK="https://www.reddit.com/"
+TWITTER_CHECK_LINK="https://www.google.com/" # must be not only 1 str but many - twitter and many nitters
 
 ENABLE_PROVIDERS="true"
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY="true"
