little .env sync config tweak

--- a/.env
+++ b/.env
@@ -221,7 +221,8 @@ ENABLE_INFO_FOR_MEDRXIV="true"
 ENABLE_INFO_FOR_REDDIT="true"
 ENABLE_INFO_FOR_TWITTER="true"
 
-ENABLE_PROVIDER_LINKS_LIMIT="true"
+ENABLE_LINKS_LIMIT="true"
+ENABLE_LINKS_LIMIT_FOR_PROVIDERS="true"
 ENABLE_LINKS_LIMIT_FOR_ARXIV="true"
 ENABLE_LINKS_LIMIT_FOR_BIORXIV="true"
 ENABLE_LINKS_LIMIT_FOR_GITHUB="true"
