--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 authors = ["sergey shmakov <tyfaproject@gmail.com>"]
-edition = "2018"
+edition = "2021"#maybe cant compile but switch from 2018 to 2021
 name = "tufa_backend"
 version = "0.1.0"
 
