add POSTGRES_ENABLE_INITIALIZATION into config

--- a/.env
+++ b/.env
@@ -98,6 +98,16 @@ POSTGRES_IP="example"
 POSTGRES_PORT="example"
 POSTGRES_DB="example"
 
+POSTGRES_ENABLE_INITIALIZATION="true"
+POSTGRES_ENABLE_INITIALIZATION_FOR_PROVIDERS="true"
+POSTGRES_ENABLE_INITIALIZATION_FOR_ARXIV="true"
+POSTGRES_ENABLE_INITIALIZATION_FOR_BIORXIV="true"
+POSTGRES_ENABLE_INITIALIZATION_FOR_GITHUB="true"
+POSTGRES_ENABLE_INITIALIZATION_FOR_HABR="true"
+POSTGRES_ENABLE_INITIALIZATION_FOR_MEDRXIV="true"
+POSTGRES_ENABLE_INITIALIZATION_FOR_REDDIT="true"
+POSTGRES_ENABLE_INITIALIZATION_FOR_TWITTER="true"
+
 WARNING_LOGS_DIRECTORY_NAME="warning_logs"
 UNHANDLED_SUCCESS_HANDLED_SUCCESS_ARE_THERE_ITEMS_INITIALIZED_POSTS_DIR="unhandled_success_handled_success_are_there_items_initialized_posts"
 PATH_TO_PROVIDER_LINK_PARTS_FOLDER="./providers_link_parts/"
