add to config DBS_ENABLE_INITIALIZATION

--- a/.env
+++ b/.env
@@ -18,6 +18,8 @@ REDDIT_CLIENT_SECRET="example"
 REDDIT_USERNAME="example"
 REDDIT_PASSWORD="example"
 
+DBS_ENABLE_INITIALIZATION="true"
+
 # url example MONGO_FIRST_HANDLE_URL_PART&MONGO_LOGIN&MONGO_SECOND_HANDLE_URL_PART&MONGO_PASSWORD&MONGO_THIRD_HANDLE_URL_PART&MONGO_IP&MONGO_FOURTH_HANDLE_URL_PART&MONGO_PORT&MONGO_IP&MONGO_FIFTH_HANDLE_URL_PART&MONGO_PARAMS
 MONGO_FIRST_HANDLE_URL_PART="mongodb://" #local "mongodb://" cloud "mongodb+srv://"
 MONGO_SECOND_HANDLE_URL_PART=":"  #local ":" cloud ":"
