--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ strum = "0.21"
 strum_macros = "0.21"
 itertools = "0.10.1"
 async-std = "1.10.0"
+convert_case = "0.4.0"
 procedural_macros_lib = { path = "./procedural_macros_lib" }
 #egg-mode = "0.15.0"//twitter
 #google-youtube3 = "1.0.13+20200402" - do not saw openssl, under linux its all good
