--- a/.env
+++ b/.env
@@ -19,6 +19,7 @@ REDDIT_USERNAME="example"
 REDDIT_PASSWORD="example"
 
 DBS_ENABLE_INITIALIZATION="true"
+PROVIDERS_LINK_PARTS_SOURCE="local" # "local" or "mongo" or "postgres" or panic on runtime
 
 # url example MONGO_FIRST_HANDLE_URL_PART&MONGO_LOGIN&MONGO_SECOND_HANDLE_URL_PART&MONGO_PASSWORD&MONGO_THIRD_HANDLE_URL_PART&MONGO_IP&MONGO_FOURTH_HANDLE_URL_PART&MONGO_PORT&MONGO_IP&MONGO_FIFTH_HANDLE_URL_PART&MONGO_PARAMS
 MONGO_FIRST_HANDLE_URL_PART="mongodb://" #local "mongodb://" cloud "mongodb+srv://"
