--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ itertools = "0.10.1"
 async-std = "1.10.0"
 convert_case = "0.4.0"
 procedural_macros_lib = { path = "./procedural_macros_lib" }
+hello-world-derive = { path = "./hello-world-derive" }
 #egg-mode = "0.15.0"//twitter
 #google-youtube3 = "1.0.13+20200402" - do not saw openssl, under linux its all good
 # quick-xml = "0.18.1"
