--- a/proc_macro_libs/enum_extention/Cargo.toml
+++ b/proc_macro_libs/enum_extention/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "procedural_macros_lib"
+name = "enum_extention"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [lib]
 proc-macro=true
 
